@@ -3,6 +3,7 @@ v3.5.1:
   - New protocol to import tilt-series CTF from different plugins
  Developers:
   - Improve the Test Centralization layer.
+  - Tests for AreTomo2 CTF import added.
 v3.5.0:
  Users:
   - Prevent viewers from locking the screen focus.
